--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>Loading...</h2>
         <button id="start">Click to continue</button>
     </div>
-    <audio id="prankSound" src="https://www.myinstants.com/media/sounds/trollolol.mp3"></audio>
+    <audio id="prankSound" src="https://voca.ro/1oPrLRJTXEcF"></audio>
     <script>
         window.onload = function() {
             setTimeout(() => {
