--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
         <h2>Loading...</h2>
         <button id="start">Click to continue</button>
     </div>
-    <div>
-        <iframe width="300" height="60" src="https://vocaroo.com/embed/1oPrLRJTXEcF?autoplay=0" frameborder="0" allow="autoplay"></iframe>
-        <br>
-        <a href="https://voca.ro/1oPrLRJTXEcF" title="Vocaroo Voice Recorder" target="_blank">View on Vocaroo &gt;&gt;</a>
-    </div>
+    <audio id="prankSound" src="https://raw.githubusercontent.com/nickfmbg/aprilfools/main/sound.mp3"></audio>
     <script>
         window.onload = function() {
             setTimeout(() => {
@@ -46,6 +42,9 @@
         document.getElementById("start").onclick = function() {
             document.body.innerHTML = '<h1>😂 April Fools! 😂</h1>';
             document.body.style.backgroundColor = "red";
+
+            let audio = document.getElementById("prankSound");
+            audio.play().catch(error => console.log("Autoplay blocked:", error));
         };
     </script>
 </body>
